feat: relatorio de contrato
